--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "adarsh-srinivasan/adarsh-srinivasan.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Adarsh Srinivasan"
   pronouns         : # example: "she/her"  
   bio              : #"Short biography for the left-hand sidebar"
   location         : #"Earth"
